--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -27,12 +27,13 @@
 
       <section class="border-bottom pb-5">
         <div class="text-center mt-5">
-          <div>
-            <img class="profile-image" src="{{#if session.pictures.[0]}}{{session.pictures.[0]}}{{else}}{{session.photo}}{{/if}}">
-            {{#if session.creator}}
-            <span class="creator-simbol"></span>
-            {{/if}}
-          </div>
+        <div class="image-div-flex">
+              <div class="profile-image" style="background:url('{{#if session.pictures.[0]}}{{session.pictures.[0]}}{{else}}{{session.photo}}{{/if}}')">
+                {{#if session.creator}}
+                <span class="creator-simbol"></span>
+                {{/if}}
+              </div>
+            </div>
           <h3 id="profile-name" class="mt-2">{{session.name}} - <span class="nt-c">{{#if session.creator}}
               Creator</span> <span class="icon-030 nt-c"></span>
             {{else}}
@@ -115,7 +116,7 @@
 
       </div>
       <hr>
-      <button class="btn btn-primary btn-block p-3 mt-5 btn-naturet nt-f" type="submit">Guardar cambios <span class="fa fa-check nt-w ml-2"></span></button>
+      <button class="btn btn-primary btn-block p-3 mt-5 btn-naturet nt-f" type="submit">Save Changes <span class="fa fa-check nt-w ml-2"></span></button>
       </form>
     </div>
   </div>
