--- a/views/users/creator/create.hbs
+++ b/views/users/creator/create.hbs
@@ -23,11 +23,12 @@
 
       <section class="border-bottom pb-5">
         <div class="text-center mt-5">
-          <div>
-            <img class="profile-image" src="{{#if session.pictures.[0]}}{{session.pictures.[0]}}{{else}}{{session.photo}}{{/if}}">
-            {{#if session.creator}}
-            <span class="creator-simbol"></span>
-            {{/if}}
+          <div class="image-div-flex">
+            <div class="profile-image" style="background:url('{{#if session.pictures.[0]}}{{session.pictures.[0]}}{{else}}{{session.photo}}{{/if}}')">
+              {{#if session.creator}}
+              <span class="creator-simbol"></span>
+              {{/if}}
+            </div>
           </div>
           <h3 id="profile-name" class="mt-2">{{session.name}} - <span class="nt-c">{{#if session.creator}}
               Creator</span> <span class="icon-030 nt-c"></span>
@@ -64,17 +65,17 @@
                 </p>
                 <div class="mt-3 mb-2 expertise-checkbox">
                   <input value="enterprise" name="expertise" type="checkbox" class="regular-checkbox"
-                    {{#ifCond "enterprise" expertise}}{{/ifCond}}> <span class="checkmark"></span>
+                    {{#ifCond "enterprise" expertise}} {{/ifCond}}> <span class="checkmark"></span>
                   <span class="ml-2 margin-checkbox nt-f">Enterprise, Lorem ipsum dolor sit amet, consectetur</span>
                 </div>
                 <div class="mb-2 expertise-checkbox">
                   <input value="proffesional" name="expertise" type="checkbox" class="regular-checkbox"
-                   {{#ifCond "proffesional" expertise}}{{/ifCond}}> <span class="checkmark"></span>
+                    {{#ifCond "proffesional" expertise}} {{/ifCond}}> <span class="checkmark"></span>
                   <span class="ml-2 margin-checkbox nt-f">Proffessional, Lorem ipsum dolor sit amet, consectetur</span>
                 </div>
                 <div class="mb-2 pb-4 expertise-checkbox">
                   <input value="organization" name="expertise" type="checkbox" class="regular-checkbox"
-                    {{#ifCond "organization" expertise}}{{/ifCond}}><span class="checkmark"></span>
+                    {{#ifCond "organization" expertise}} {{/ifCond}}><span class="checkmark"></span>
                   <span class="ml-2 margin-checkbox nt-f">ONG, Lorem ipsum dolor sit amet, consectetur onsectetur</span>
                 </div>
 
@@ -228,7 +229,7 @@
 
 
 
-{{!-- 
+{{!--
 
 
 
@@ -273,28 +274,31 @@
             <div class='col-12 mt-4 mb-3 expertise-check-group'>
               <hr>
               <h4>Type of Expertise</h4>
-              
+
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor
                 sit amet, consectetur adipiscing elit</p>
               <div class="mt-3 mb-2 expertise-checkbox">
-                <input value="enterprise" name="expertise" type="checkbox" class="regular-checkbox" {{#ifCond "enterprise" expertise}}{{/ifCond}}  > Empresa, Lorem
+                <input value="enterprise" name="expertise" type="checkbox" class="regular-checkbox"
+                  {{#ifCond "enterprise" expertise}} {{/ifCond}}> Empresa, Lorem
                 ipsum dolor sit amet,
                 consectetur
               </div>
               <div class="mb-2 expertise-checkbox">
-                <input value="proffesional" name="expertise" type="checkbox" class="regular-checkbox" {{#ifCond "proffesional" expertise}}{{/ifCond}} > Profesional,
+                <input value="proffesional" name="expertise" type="checkbox" class="regular-checkbox"
+                  {{#ifCond "proffesional" expertise}} {{/ifCond}}> Profesional,
                 Lorem ipsum dolor sit amet,
                 consectetur
               </div>
               <div class="mb-2 expertise-checkbox">
-                <input value="organization" name="expertise" type="checkbox" class="regular-checkbox" {{#ifCond "organization" expertise}}{{/ifCond}} > ONG, Lorem ipsum
+                <input value="organization" name="expertise" type="checkbox" class="regular-checkbox"
+                  {{#ifCond "organization" expertise}} {{/ifCond}}> ONG, Lorem ipsum
                 dolor sit amet,
                 consectetur onsectetur
               </div>
               {{#if errors.expertise}}
-                 <h3>{{errors.expertise}}</h3> 
+              <h3>{{errors.expertise}}</h3>
               {{/if}}
-               <hr>
+              <hr>
             </div>
 
             <div class='col-12 mt-4 mb-4'>
@@ -303,18 +307,19 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum elit</p>
 
               {{#each allPolitics as |politic|}}
-                <div class="mt-3 mb-2 politics-checkbox">
-                   <input name="politic" type="checkbox" class="regular-checkbox" value="{{politic.name}}"  {{#isPoliticSelected ../session politic ../politics }} {{/isPoliticSelected}} />  {{politic.name}}
-                </div>
+              <div class="mt-3 mb-2 politics-checkbox">
+                <input name="politic" type="checkbox" class="regular-checkbox" value="{{politic.name}}"
+                  {{#isPoliticSelected ../session politic ../politics }} {{/isPoliticSelected}} /> {{politic.name}}
+              </div>
               {{/each}}
 
-      
 
-               {{#if errors.politic}}
-                 <h3>{{errors.politic}}</h3> 
+
+              {{#if errors.politic}}
+              <h3>{{errors.politic}}</h3>
               {{/if}}
               <hr>
-             
+
             </div>
 
             <div class="col-12 mb-2">
@@ -327,11 +332,11 @@
             <div class="col-12 mb-2 mt-4">
               <h4>Enterprise or Profesional email:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
               <input type="email" name="enterpriseEmail" class="w-100 mt-1" value="{{enterpriseEmail}}">
-                 {{#if errors.enterpriseEmail}}
-                 <h3>{{errors.enterpriseEmail}}</h3> 
+              {{#if errors.enterpriseEmail}}
+              <h3>{{errors.enterpriseEmail}}</h3>
               {{/if}}
               <hr>
-             
+
             </div>
 
             <div class="col-xl-12 col-md-12 col-12">
@@ -339,15 +344,15 @@
               <small>Lorem it amet, consectetur adipiscing elit, Lorem ipsum dolor
                 sit amet, consectetur adipiscing elit</small>
               <input name="acreditation" type="text" class="w-100 mt-1" value="{{acreditation}}">
-                   {{#if errors.acreditation}}
-                 <h3>{{errors.acreditation}}</h3> 
+              {{#if errors.acreditation}}
+              <h3>{{errors.acreditation}}</h3>
               {{/if}}
               <hr>
             </div>
 
-       
 
-            
+
+
 
             <div class="col-xl-12 col-md-12 col-12">
               <h4>Your Enterprise Photo</h4>
