--- a/views/experiences/detail.hbs
+++ b/views/experiences/detail.hbs
@@ -1,14 +1,15 @@
-<div class="container profile-container">
-  <div class="row pb-5">
+<div class="container-slider mx-auto profile-container mt-6">
+  <div class="row pb-5 pt-5">
 
-    <div class="col-xl-3 col-md-3 col-12 ">
-      <div class=" profile-navigation d-flex flex-column mx-auto ">
-        <a href="">Categories</a>
-        <a href="">Some description</a>
-        <a href="/">Home</a>
-        <a href="/profile">profile</a>
-
-
+ <div class="col-xl-4 col-md-12 col-12 row mx-auto nav-intro-profile" id="responsive-menu-tag">
+        <div class="profile-sidenav d-flex flex-column mx-auto nav-intro-profile mb-5 " id="getFixed">
+          <div class="profile-sidenav-inside d-flex flex-column mt-4">
+            <h4 class="nt-fb"><span class="far fa-map nt-c mr-3"></span>Creating experiences</h4>
+            <a href="#categories">Categories</a>
+            <a href="#price">Price EUR</a>
+            <a href="#description-exp">Description</a>
+            <a href="#route">Route</a>
+           
         {{#theCreator experience session}}
         <h6>creator</h6>
         {{else}}
@@ -31,11 +32,22 @@
         </form>
         {{/ispurchasedexp}}
         {{/theCreator}}
+          </div>
+        </div>
       </div>
-    </div>
 
 
-    <div class="col-xl-9 col-md-9 col-12">
+
+
+
+
+
+
+
+
+
+
+    <div class="col-xl-8 col-md-8 col-12">
       <div class="text-center">
         <img class="profile-image" src="http://prpop.org/wp-content/plugins/ajax-search-pro/img/default.jpg" width="250px">
         <h3>{{experience.name}}</h3>
@@ -206,6 +218,25 @@
     </div>
   </div>
 </div>
+<script>
+  jQuery(function ($) {
+    function fixDiv() {
+      var $cache = $('#getFixed');
+      if ($(window).scrollTop() > 100 && $(window).width() >= 1080)
+        $cache.css({
+          'top': '40px'
+        });
+      else
+        $cache.css({
+          'top': 'auto'
+        });
+    }
+    $(window).scroll(fixDiv);
+    fixDiv();
+  });
+</script>
+
+
 
 <script>
   var decodedJson = decodeURIComponent("{{{pointsJSON}}}");
