--- a/views/partials/pricesorted.hbs
+++ b/views/partials/pricesorted.hbs
@@ -1,5 +1,5 @@
 <div class="container-slider mx-auto mb-4">
-  <h2>Best price ofers</h2>
+  <h2>Best price offers</h2>
   <p>Find our best experiences oferts, witth the best prices</p>
   <hr>
   <section class="customer-experiencer slider mt-4 mb-0">
